classDiagram
    class BaseModel {
        +UUID id
        +DateTime created_at
        +DateTime updated_at
        +save()
        +to_dict()
    }

    class User {
        +String first_name
        +String last_name
        +String phone_number
        +String email
        +String password
        +String address 'None'
        +String profile_picture 'None'
        +Boolean is_admin 'False'
        +Boolean is_owner 'False'
        +List<Place> places
        +List<Review> reviews
        +create_place(place: Place): Place
        +write_review(review: Review): Review
    }

    class Place {
        +String type
        +String title
        +String description
        +Float longitude
        +Float latitude
        +Float price_per_night
        +Integer max_guests
        +Boolean is_available
        +User owner
        +List<Amenity> amenities
        +List<Review> reviews
        +add_amenity(amenity: Amenity): void
        +remove_amenity(amenity: Amenity): void
        +get_reviews(): List<Review>
    }

    class Amenity {
        +String name
        +String description
        +Place place
    }

    class Review {
        +String text
        +Interger rating
        +User user
        +Place place
        +edit_text(new_text: String, new_rating: Integer): void
        +delete(): void
    }

    %% Inheritance
    BaseModel <|-- User : inherits
    BaseModel <|-- Place : inherits
    BaseModel <|-- Amenity : inherits
    BaseModel <|-- Review : inherits

    %% Relationships
    User "1" --> "0..*" Place : owns
    Place "0..*" o-- "0..*" Amenity : has
    Place "1" --> "0..*" Review : receives
    User "1" --> "0..*" Review : writes
    Review --> Place: reviews